# QML_CMake_App

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  ComDialog.qml  ComParam.qml  Correct.qml  CorrectButton.qml  LogPage.qml  LoginWin.qml  MyButton.qml  MyText.qml  MyTumbler.qml  OtherInfoPage.qml  ParamConfig.qml  PowerProgress.qml  RxTime.qml  RxTimeRecord.qml  ScanAndRecordTimeBlock.qml  ScanBlock.qml  SelectTime.qml  SerialParam.qml  batteryinfo.h  baudinfo.cpp  baudinfo.h  bms.cpp  bms.h  comthread.h  image.qrc  login.cpp  loginfomodel.h  md5.cpp  qml.qrc  tempinfo.h
BMS/: CMakeLists.txt  CMakeUserPresets.json  DataInfo.qml  No192.qml  ParamConfigInput.qml  TipsWin.qml  batteryinfo.cpp  comthread.cpp  image.qrc  login.h  loginfomodel.cpp  main.cpp  md5.h  otherinfomodel.cpp  serialportinfo.cpp  serialportinfo.h  tempinfo.cpp
BMS/include/: otherinfomodel.h
BMS/src/: BatteryInfo.qml  HMIButton.qml  ParamConfigCombo.qml  RomPage.qml  main.cpp  main.qml
xlsx/: CMakeLists.txt  CMakeUserPresets.json
xlsx/include/: xlsx.h  xlsx_global.h  xlsxabstractooxmlfile.h  xlsxabstractooxmlfile_p.h  xlsxabstractsheet.h  xlsxabstractsheet_p.h  xlsxcell.h  xlsxcell_p.h  xlsxcellformula.h  xlsxcellformula_p.h  xlsxcelllocation.h  xlsxcellrange.h  xlsxcellreference.h  xlsxchart.h  xlsxchart_p.h  xlsxchartsheet.h  xlsxchartsheet_p.h  xlsxcolor_p.h  xlsxconditionalformatting.h  xlsxconditionalformatting_p.h  xlsxcontenttypes_p.h  xlsxdatavalidation.h  xlsxdatavalidation_p.h  xlsxdatetype.h  xlsxdocpropsapp_p.h  xlsxdocpropscore_p.h  xlsxdocument.h  xlsxdocument_p.h  xlsxdrawing_p.h  xlsxdrawinganchor_p.h  xlsxformat.h  xlsxformat_p.h  xlsxglobal.h  xlsxmediafile_p.h  xlsxnumformatparser_p.h  xlsxrelationships_p.h  xlsxrichstring.h  xlsxrichstring_p.h  xlsxsharedstrings_p.h  xlsxsimpleooxmlfile_p.h  (+9 more)
xlsx/src/: xlsx.cpp
xlsx_src/: xlsxcolor.cpp
